--- a/po/nl.po
+++ b/po/nl.po
@@ -1,13 +1,13 @@
-# translation of gst-plugins-base-1.4.0.po to Dutch
+# translation of gst-plugins-base-1.5.1.po to Dutch
 # This file is put in the public domain.
 #
-# Freek de Kruijf <f.de.kruijf@gmail.com>, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014.
+# Freek de Kruijf <f.de.kruijf@gmail.com>, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 1.4.0\n"
+"Project-Id-Version: gst-plugins-base 1.5.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-06-07 09:34+0200\n"
-"PO-Revision-Date: 2014-07-22 10:50+0200\n"
+"POT-Creation-Date: 2015-06-24 11:14+0200\n"
+"PO-Revision-Date: 2015-06-13 18:23+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@gmail.com>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "Language: nl\n"
@@ -523,9 +523,9 @@ msgstr ""
 "Niet beëindigen na het tonen van de initiële lijst apparaten, maar wacht op "
 "toegevoegde/verwijderde apparaten."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Volume: %.0f%%"
-msgstr "Volume"
+msgstr "Volume: %.0f%%"
 
 msgid "Buffering..."
 msgstr "In buffer opslaan..."
@@ -534,73 +534,85 @@ msgid "Clock lost, selecting a new one\n"
 msgstr "Klok verloren, een nieuwe wordt geselecteerd\n"
 
 msgid "Reached end of play list."
+msgstr "Einde van de afspeellijst bereikt."
+
+msgid "Paused"
 msgstr ""
 
 #, c-format
 msgid "Now playing %s\n"
-msgstr ""
+msgstr "Nu aan het afspelen %s\n"
 
 #, c-format
 msgid "About to finish, preparing next title: %s"
-msgstr ""
+msgstr "Op het punt te eindigen, voorbereiden van volgende titel: %s"
 
 #, c-format
 msgid "Playback rate: %.2f"
-msgstr ""
+msgstr "Afspeelsnelheid: %.2f"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not change playback rate to %.2f"
-msgstr "Kan het apparaat niet openen voor afspelen in stereo."
+msgstr "Kon afspeelsnelheid niet wijzigen naar %.2f"
 
 msgid "space"
-msgstr ""
+msgstr "spatie"
 
 msgid "pause/unpause"
-msgstr ""
+msgstr "pauzeren/verder"
 
 msgid "q or ESC"
-msgstr ""
+msgstr "q of ESC"
 
 msgid "quit"
-msgstr ""
+msgstr "stoppen"
 
 msgid "play next"
-msgstr ""
+msgstr "volgende afspelen"
 
 msgid "play previous"
-msgstr ""
+msgstr "vorige afspelen"
 
 msgid "seek forward"
-msgstr ""
+msgstr "vooruit zoeken"
 
 msgid "seek backward"
-msgstr ""
+msgstr "achteruit zoeken"
 
-#, fuzzy
 msgid "volume up"
-msgstr "Volume"
+msgstr "volume omhoog"
 
 msgid "volume down"
-msgstr ""
+msgstr "volume omlaag"
 
 msgid "increase playback rate"
-msgstr ""
+msgstr "afspeelsnelheid verhogen"
 
 msgid "decrease playback rate"
-msgstr ""
+msgstr "afspeelsnelheid verlagen"
 
 msgid "change playback direction"
-msgstr ""
+msgstr "afspeelrichting wijzigen"
 
 msgid "enable/disable trick modes"
-msgstr ""
+msgstr "truc-modi in-/uitschakelen"
 
-msgid "show keyboard shortcuts"
+#, fuzzy
+msgid "change audio track"
+msgstr "Deze CD heeft geen audiotracks"
+
+msgid "change video track"
 msgstr ""
 
 #, fuzzy
+msgid "change subtitle track"
+msgstr "Kate ondertitelformaat"
+
+msgid "show keyboard shortcuts"
+msgstr "sneltoetsen tonen"
+
 msgid "Interactive mode - keyboard controls:"
-msgstr "Interactieve besturing via toetsenbord"
+msgstr "Interactieve modus - besturing op toetsenbord"
 
 msgid "Video sink to use (default is autovideosink)"
 msgstr "Te gebruiken video-sink (standaard is autovideosink)"
@@ -614,9 +626,8 @@ msgstr "Afspelen activeren zonder gaten"
 msgid "Shuffle playlist"
 msgstr "Afspeellijst in willekeurige volgorde"
 
-#, fuzzy
 msgid "Disable interactive control via the keyboard"
-msgstr "Interactieve besturing via toetsenbord"
+msgstr "Interactieve besturing via toetsenbord uitschakelen"
 
 msgid "Volume"
 msgstr "Volume"
@@ -625,7 +636,7 @@ msgid "Playlist file containing input media files"
 msgstr "Afspeellijstbestand met mediabestanden voor invoer"
 
 msgid "Do not print any output (apart from errors)"
-msgstr ""
+msgstr "Geen uitvoer afdrukken (los van fouten)"
 
 #, c-format
 msgid "Usage: %s FILE1|URI1 [FILE2|URI2] [FILE3|URI3] ..."
@@ -635,7 +646,7 @@ msgid "You must provide at least one filename or URI to play."
 msgstr "U moet minstens één bestandsnaam of URI leveren om af te spelen."
 
 msgid "Press 'k' to see a list of keyboard shortcuts.\n"
-msgstr ""
+msgstr "Druk op 'k' om een lijst met sneltoetsen te zien.\n"
 
 #~ msgid "A %s plugin is required to play this stream, but not installed."
 #~ msgstr ""
