--- a/po/vi.po
+++ b/po/vi.po
@@ -1,16 +1,16 @@
 # Vietnamese Translation for GST Plugins Base.
 # Bản dịch tiếng Việt dành cho GST Plugins Base.
-# Copyright © 2014 Free Software Foundation, Inc.
+# Copyright © 2015 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gst-plugins-base package.
 # Clytie Siddall <clytie@riverland.net.au>, 2005-2010.
-# Trần Ngọc Quân <vnwildman@gmail.com>, 2012-2014.
+# Trần Ngọc Quân <vnwildman@gmail.com>, 2012-2014, 2015.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 1.4.0\n"
+"Project-Id-Version: gst-plugins-base 1.5.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-06-07 09:34+0200\n"
-"PO-Revision-Date: 2014-07-23 15:56+0700\n"
+"POT-Creation-Date: 2015-06-24 11:14+0200\n"
+"PO-Revision-Date: 2015-06-11 08:32+0700\n"
 "Last-Translator: Trần Ngọc Quân <vnwildman@gmail.com>\n"
 "Language-Team: Vietnamese <translation-team-vi@lists.sourceforge.net>\n"
 "Language: vi\n"
@@ -19,10 +19,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Language-Team-Website: <http://translationproject.org/team/vi.html>\n"
-"X-Generator: LocFactoryEditor 1.8\n"
-"X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-Language: Vietnamese\n"
-"X-Poedit-Country: VIET NAM\n"
+"X-Generator: Gtranslator 2.91.7\n"
 
 msgid "Could not open device for playback in mono mode."
 msgstr "Không thể mở thiết bị để phát lại trong chế độ đơn kênh."
@@ -204,7 +201,7 @@ msgid "Lossless MSZH"
 msgstr "MSZH không mất gì (Lossless MSZH)"
 
 msgid "Run-length encoding"
-msgstr "Mã hoá độ dài chạy (Run-Length Encoding: RLE)"
+msgstr "Mã hóa độ dài chạy (Run-Length Encoding: RLE)"
 
 msgid "Timed Text"
 msgstr "Chữ được định thời"
@@ -324,7 +321,7 @@ msgstr "muxer (bộ kết hợp lại) %s"
 
 #, c-format
 msgid "%s encoder"
-msgstr "bộ mã hoá %s"
+msgstr "bộ mã hóa %s"
 
 #, c-format
 msgid "GStreamer element %s"
@@ -343,7 +340,7 @@ msgid "Unknown decoder element"
 msgstr "Không rõ phần tử giải mã"
 
 msgid "Unknown encoder element"
-msgstr "Không rõ phần tử mã hoá"
+msgstr "Không rõ phần tử mã hóa"
 
 msgid "Plugin or element of unknown type"
 msgstr "Không rõ kiểu của phần bổ sung hay phần tử"
@@ -526,84 +523,96 @@ msgstr ""
 "Không tồn tại sau khi hiển thị danh sách thiết bị khởi tạo, nhưng lại chờ "
 "cho thiết bị thêm/xóa."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Volume: %.0f%%"
-msgstr "Âm lượng"
+msgstr "Âm lượng: %.0f%%"
 
 msgid "Buffering..."
-msgstr "Đang đệm..."
+msgstr "Đang đệm…"
 
 msgid "Clock lost, selecting a new one\n"
 msgstr "Mất đồng hồ, chọn một cái mới\n"
 
 msgid "Reached end of play list."
+msgstr "Đã tìm đến cuối danh sách phát."
+
+msgid "Paused"
 msgstr ""
 
 #, c-format
 msgid "Now playing %s\n"
-msgstr ""
+msgstr "Đang phát %s\n"
 
 #, c-format
 msgid "About to finish, preparing next title: %s"
-msgstr ""
+msgstr "Gần xong, đang chuẩn bị tiêu đề kế: %s"
 
 #, c-format
 msgid "Playback rate: %.2f"
-msgstr ""
+msgstr "Tốc độ phát lại: %.2f"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not change playback rate to %.2f"
-msgstr "Không thể mở thiết bị để phát lại trong chế độ âm lập thể."
+msgstr "Không thể đổi tốc độ phát lại thành %.2f"
 
 msgid "space"
-msgstr ""
+msgstr "dấu cách"
 
 msgid "pause/unpause"
-msgstr ""
+msgstr "dừng/thôi dừng"
 
 msgid "q or ESC"
-msgstr ""
+msgstr "q hay ESC"
 
 msgid "quit"
-msgstr ""
+msgstr "thoát"
 
 msgid "play next"
-msgstr ""
+msgstr "phát kế"
 
 msgid "play previous"
-msgstr ""
+msgstr "phát kế trước"
 
 msgid "seek forward"
-msgstr ""
+msgstr "di chuyển tiếp"
 
 msgid "seek backward"
-msgstr ""
+msgstr "di chuyển ngược"
 
-#, fuzzy
 msgid "volume up"
-msgstr "Âm lượng"
+msgstr "tăng âm lượng"
 
 msgid "volume down"
-msgstr ""
+msgstr "giảm âm lượng"
 
 msgid "increase playback rate"
-msgstr ""
+msgstr "tăng tốc độ phát lại"
 
 msgid "decrease playback rate"
-msgstr ""
+msgstr "giảm tốc độ phát lại"
 
 msgid "change playback direction"
-msgstr ""
+msgstr "thay đổi hướng phát lại"
 
 msgid "enable/disable trick modes"
-msgstr ""
+msgstr "bật/tắt chế độ thủ thuật"
 
-msgid "show keyboard shortcuts"
+#, fuzzy
+msgid "change audio track"
+msgstr "Đĩa CD này không có rãnh âm thanh nào"
+
+msgid "change video track"
 msgstr ""
 
 #, fuzzy
+msgid "change subtitle track"
+msgstr "Định dạng phụ đề Kate"
+
+msgid "show keyboard shortcuts"
+msgstr "hiện phím tắt"
+
 msgid "Interactive mode - keyboard controls:"
-msgstr "Điều khiển tương tác thông qua bàn phím"
+msgstr "Chế độ tương tác - điều khiển thông qua bàn phím:"
 
 msgid "Video sink to use (default is autovideosink)"
 msgstr "Bộ chứa video được dùng (mặc định là autovideosink)"
@@ -617,9 +626,8 @@ msgstr "Bật phát lại không khe"
 msgid "Shuffle playlist"
 msgstr "Xáo trộn danh sách phát"
 
-#, fuzzy
 msgid "Disable interactive control via the keyboard"
-msgstr "Điều khiển tương tác thông qua bàn phím"
+msgstr "Tắt điều khiển tương tác thông qua bàn phím"
 
 msgid "Volume"
 msgstr "Âm lượng"
@@ -628,17 +636,17 @@ msgid "Playlist file containing input media files"
 msgstr "Tập tin danh sách phát có chứa các tập tin đa phương tiện đầu vào"
 
 msgid "Do not print any output (apart from errors)"
-msgstr ""
+msgstr "Đừng in bất kỳ cái gì ra (lấy riêng từ lỗi)"
 
 #, c-format
 msgid "Usage: %s FILE1|URI1 [FILE2|URI2] [FILE3|URI3] ..."
-msgstr "Cách dùng: %s TẬP-TIN1|URI1 [TẬP-TIN2|URI2] [TẬP-TIN3|URI3] ..."
+msgstr "Cách dùng: %s TẬP-TIN1|URI1 [TẬP-TIN2|URI2] [TẬP-TIN3|URI3] …"
 
 msgid "You must provide at least one filename or URI to play."
 msgstr "Bạn phải cung cấp ít nhất là một tên tập tin hay URI để phát."
 
 msgid "Press 'k' to see a list of keyboard shortcuts.\n"
-msgstr ""
+msgstr "Nhấn phím “k” để xem toàn bộ phím tắt.\n"
 
 #~ msgid "A %s plugin is required to play this stream, but not installed."
 #~ msgstr "Cần phần bổ sung %s để phát luồng này nhưng chưa cài đặt."
